--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.23.1",
+        "cookies-js": "^1.2.3",
         "vue-router": "^3.6.5",
         "vuex": "^3.6.2"
     }
