--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,27 @@
-APP_NAME=Template
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:wYtGMJIydEFLxUOdOzwuyUPiB/TR3unpeKQMP0BQmY4=
+APP_KEY=base64:8vgkNONVXqV+YcPbpQ/6ms1xQHEmh8eg+jA4Zg1mfNY=
 APP_DEBUG=true
 APP_URL=http://localhost
-IGNITION_THEME=dark
+VITE_API_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=database
-SESSION_DRIVER=database
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
-
-VITE_DEV_SERVER_URL=http://localhost:5000
-
-DB_CONNECTION=default
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=student_care
-DB_USERNAME=root
-DB_PASSWORD=1111
-
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -32,30 +30,43 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
+AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
-AWS_URL=
+AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=a
-PUSHER_APP_KEY=b
-PUSHER_APP_SECRET=c
-PUSHER_HOST=localhost
-PUSHER_PORT=6001
-PUSHER_SCHEME=http
-PUSHER_APP_CLUSTER=
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
 
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+GOOGLE_SCOPE=
+GOOGLE_PROMPT=
+GOOGLE_RESPONSE_TYPE=
+
+VITE_GOOGLE_CLIENT_ID="${GOOGLE_CLIENT_ID}"
+VITE_GOOGLE_REDIRECT_URI="${GOOGLE_REDIRECT_URI}"
+VITE_GOOGLE_SCOPE="${GOOGLE_SCOPE}"
+VITE_GOOGLE_PROMPT="${GOOGLE_PROMPT}"
+VITE_GOOGLE_RESPONSE_TYPE="${GOOGLE_RESPONSE_TYPE}"
