--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue2": "^2.3.3",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.85.0",
         "terser": "^5.39.0",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-vue2": "^2.0.3"
     },
     "dependencies": {
+        "bootstrap": "4.6.1",
         "bootstrap-vue": "^2.23.1",
-        "cookies-js": "^1.2.3",
+        "dotenv": "^16.4.7",
+        "dotenv-expand": "^12.0.1",
+        "js-cookie": "^3.0.5",
+        "simple-notify": "^1.0.6",
+        "vue": "^2.6.14",
         "vue-router": "^3.6.5",
         "vuex": "^3.6.2"
     }
