--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "format": "npx prettier --write ."
     },
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "prettier": "^3.5.3",
         "sass": "^1.85.0",
         "terser": "^5.39.0",
         "vite": "^4.0.0",
